# mini-erp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: database.py  invoice_template.html  main.py  models.py  style_loader.py  utils.py
app/pages/: 1_Company_Profile.py  2_Client_Management.py  3_Product_Database.py  4_Orders.py
assets/: style.css
tests/: test_models.py  test_utils.py
