[project]
name = "mini-erp"
version = "0.1.0"
description = "Application for managing orders"
authors = [
    {name = "Modzelowy",email = "storypl@wp.pl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.46.0,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "streamlit-option-menu (>=0.4.0,<0.5.0)",
    "weasyprint (>=65.1,<66.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "num2words (>=0.5.14,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
ruff = "^0.12.0"
pytest = "^8.4.1"
mypy = "^1.16.1"
absolufy-imports = "^0.3.1"

[tool.pytest.ini_options]
pythonpath = [
  "app"
]
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # function is too complex
    "RUF001", # Allow ambiguous unicode characters, we use them for UI emojis
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
